# dbmeta

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  python-package.yml  test.yml
scripts/: lint.sh  test.sh
src/: __init__.py
src/dbmeta/: __init__.py  dbmeta.py  settings.py
src/dbmeta/connections/: __init__.py  database.py  exclude.py  postgres.py
tests/: Dockerfile  _fix_db_meta.py  conftest.py  test_dbmeta.py
tests/postgres/: _fix_pg_connection.py  tables.py  test_postgres.py
