[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "dbmeta"
version = "0.0.12"
authors = [
    { name="Francesco Vertemati", email="verte.fra@gmail.com" }
]
description = "Inspect database schema, tables and columns and returns a metadata object"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "psycopg>=3.1.4"
]

[project.urls]

[project.optional-dependencies]
test = [
  "pytest==7.2.0",
  "pytest-cov==4.0.0",
  "pydantic>=1.10.2",
  "psycopg>=3.1.4"
]

lint = [
    "mypy==0.990",
    "black==22.10.0"
]

# mypy settings 
[tool.mypy]
warn_return_any = true
exclude = ["^tests/$", "^.venv/$"]